Release 3.2.1 GUI optimizations